<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.main.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_grey"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/compass_image"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/compass" />

    <TextView
        android:id="@+id/current_coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/armata"
        android:text="@string/current_coordinates_info_text"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compass_image" />

    <TextView
        android:id="@+id/longitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/armata"
        android:text="@string/longitude"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compass_image" />

    <TextView
        android:id="@+id/latitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/armata"
        android:text="@string/latitude"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compass_image" />

    <Button
        android:id="@+id/set_coordiantes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/armata"
        android:text="@string/set_destination_button"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="14sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latitude_text" />

    <LinearLayout
        android:id="@+id/set_coordinates_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/custom_background_gradient"
        android:foregroundGravity="bottom"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/set_coordiantes_button"
        app:layout_optimizationLevel="standard">

        <EditText
            android:id="@+id/longitude_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:autofillHints="21.3"
            android:fontFamily="@font/armata"
            android:inputType="numberDecimal"
            android:text="@string/longitude"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/latitude_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:autofillHints="52.3"
            android:fontFamily="@font/armata"
            android:inputType="numberDecimal"
            android:text="@string/latitude"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/save_coordinates_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/armata"
            android:text="@string/save_button_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:cornerRadius="20dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Material.Light.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/set_coordinates_layout"
        app:layout_constraintStart_toStartOf="@+id/set_coordinates_layout"
        app:layout_constraintTop_toBottomOf="@+id/set_coordiantes_button" />


</androidx.constraintlayout.widget.ConstraintLayout>